[package]
name = "dll-rs"
version = "0.1.0"
authors = ["sebiiV"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
winapi = { version = "0.3.9", features = ["winuser", "minwindef","ntdef","libloaderapi"] }
detour = "0.7.1"
