[package]
name = "injector"
version = "0.1.0"
authors = ["sebiiV"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dll-rs = {path = "../dll-rs"}


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["libloaderapi","tlhelp32","handleapi","minwindef","processthreadsapi","winnt","ntdef","memoryapi","basetsd","synchapi","wow64apiset","errhandlingapi"] }
wio = "0.2.2"
log = "0.4.11"
pe = "0.1.1"
env_logger = "0.7.1"
widestring = "0.4.2"
